@@ -1,3 +1,6 @@
+- Improvement: Add key to registration tuition debt concatenation, to have the degree simple name [#qubIT-Fenix-5846]
+- Bug Fix: In calculation for tuition debts using the new registration tuition service, avoid closing debit notes to decrement amounts by product [#qubIT-Fenix-5854]
+
 11.17.7 (24-09-2024)
 - Refactor: Replace usages of deprecated RegistrationStateTypeEnum [#qubIT-Fenix-2585]
 
